@@ -428,6 +428,8 @@ name|IOException
 block|{
 if|if
 condition|(
+name|this
+operator|.
 name|doc
 argument_list|()
 operator|>
@@ -436,6 +438,8 @@ condition|)
 block|{
 name|lastScoredDoc
 operator|=
+name|this
+operator|.
 name|doc
 argument_list|()
 expr_stmt|;
@@ -559,6 +563,8 @@ name|IOException
 block|{
 if|if
 condition|(
+name|this
+operator|.
 name|doc
 argument_list|()
 operator|>
@@ -567,6 +573,8 @@ condition|)
 block|{
 name|lastScoredDoc
 operator|=
+name|this
+operator|.
 name|doc
 argument_list|()
 expr_stmt|;
@@ -643,6 +651,8 @@ name|IOException
 block|{
 if|if
 condition|(
+name|this
+operator|.
 name|doc
 argument_list|()
 operator|>
@@ -651,6 +661,8 @@ condition|)
 block|{
 name|lastScoredDoc
 operator|=
+name|this
+operator|.
 name|doc
 argument_list|()
 expr_stmt|;
